--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
     font-size: 50px;
 }
 
-.text-highlight {
+.orange-highlight {
     color: orange;
 }
 
@@ -23,6 +23,57 @@ h1 {
     width: 100%;
 }
 
+section {
+    height: 500px;
+}
+.top-banner {
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
 
+.link-button {
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightSalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 600;
+}
 
+.dream-area {
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position:  right;
+    margin-bottom: 60px;
+}
+
+.experience-area {
+     background-image: url("images/exp-bg.png");
+     background-repeat: no-repeat;
+     background-position: left;
+}
+
+.single-experience {
+    box-shadow: 7px 7px 28px gray;
+    border-radius: 5px;
+    height: 60%;
+}
+
+#full-stack {
+    border-left: 6px solid;
+    border-image: linear-gradient(180deg, lightSalmon, tomato);
+    border-image-slice: 1;
+
+}
+
+#baby-web {
+    border-left: 6px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+
+.text-center {
+    text-align: center;
+    font-size: 12px;
+}
 
